# crowd-counting

./: .gitignore  .gitmodules  CMakeLists.txt  EvaluateSHT.m  ExtractFeatures.m  FinalCount.py  README.md  build.ps1  build.sh
MRF/: MRF.cpp  MRF_core.cpp  MRF_core.h  MRF_physycom.cpp  image.h  misc.h  testMRF.m
cloud/: crowd_wrap.sh  phase_1_patch_predict.py  phase_2_evaluate.m  resize.py
crowd-pipeline/: CMakeLists.txt  Snakefile  build.ps1  build.sh  config.yaml  crowd_pipe.py  image.hpp  mrflib.cpp  resnet152.py  train_pipe.py
model/: model0_UCF.h5  model0_UCF.json  model1_UCF.h5  model1_UCF.json  model2_UCF.h5  model2_UCF.json  model3_UCF.h5  model3_UCF.json  model4_UCF.h5  model4_UCF.json
physycom/: compare.py  grayscale.py  resize.py  view_patch.py
physycom/count/: crowd_compare.sh  crowd_wrap.sh  phase_0_extract_features.m  phase_1_patch_predict.py  phase_2_evaluate.m  run_crowd_compare.sh  run_full_compare.sh  run_physycom_mrf.sh  view_patch.py
physycom/model/: model_10010050501.h5  model_100501.json  model_3layer.h5  model_5strati.h5  model_5strati.json  model_A_SHT.h5  model_A_SHT.json  model_UCF0.h5  model_UCF0.json  model_UCF1.h5  model_UCF1.json  model_UCF2.h5  model_UCF2.json  model_UCF3.h5  model_UCF3.json  model_UCF4.h5  model_UCF4.json  model_venice.h5  model_venice.json
physycom/train/: create_features_dataset.m  train_model.py
portCPP/: crowd_counting.hpp  image.hpp
venice/: EvaluateVENICE.m  ExtractFeaturesVENICE.m  features2XY.py  model_VEN.h5  model_VEN.json  patch_predict_VENICE.py  regress_VEN.py  regress_VENICE.py
